--- a/index.html
+++ b/index.html
@@ -3,32 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Personal portfolio showcasing projects, skills, and achievements by [Your Name]. Explore my work in web development, design, and more." />
-    <meta name="keywords" content="portfolio, web developer, [Your Name], projects, skills, web design, programming" />
-    <meta name="author" content="[Your Name]" />
+    <meta
+      name="description"
+      content="Personal portfolio showcasing projects, skills, and achievements by Anurudhan. Explore my work in web development, design, and more."
+    />
+    <meta
+      name="keywords"
+      content="portfolio, web developer, Anurudhan, projects, skills, web design, programming"
+    />
+    <meta name="author" content="Anurudhan" />
     <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph Tags for social media sharing -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Anurudhan | Professional Portfolio" />
-    <meta property="og:description" content="Explore the portfolio of Anurudhan, featuring innovative projects in web development, design, and more." />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Anurudhan, featuring innovative projects in web development, design, and more."
+    />
     <meta property="og:image" content="/darkcode.jpeg" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Anurudhan Portfolio" />
 
-    <!-- Twitter Card Tags -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Anurudhan Professional Portfolio" />
-    <meta name="twitter:description" content="Discover Anurudhan's portfolio, showcasing expertise in web development and creative projects." />
+    <meta
+      name="twitter:description"
+      content="Discover Anurudhan's portfolio, showcasing expertise in web development and creative projects."
+    />
     <meta name="twitter:image" content="/darkcode.jpeg" />
 
-    <link rel="icon" type="image/svg+xml" href="/darkcode.jpeg" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons/css/all.min.css" />
+    <link rel="icon" type="image/jpeg" href="/darkcode.jpeg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
 
     <title>Professional Portfolio</title>
   </head>
-  <body>
+  <body class="bg-black text-white font-mono min-h-screen overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
